// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  data-testid="signIn-container"
>
  <div
    role="banner"
  >
    <Localized
      elems={
        Object {
          "subtitle": <div
            className="coral coral-login-header SignIn-header"
          />,
          "title": <div
            className="coral coral-login-title SignIn-title"
          />,
        }
      }
      id="signIn-signInToJoinHeader"
    >
      <div
        className="coral coral-login-bar SignIn-bar"
      >
        <div
          className="coral coral-login-title SignIn-title"
        >
          Sign In
        </div>
        <div
          className="coral coral-login-header SignIn-header"
        >
          to join the conversation
        </div>
      </div>
    </Localized>
  </div>
  <div
    className="coral coral-login-subBar SignIn-subBar"
    role="contentinfo"
  >
    <Localized
      elems={
        Object {
          "textlink": <ForwardRef(forwardRef)
            className="SignIn-signUp"
            color="primary"
            fontFamily="secondary"
            fontSize="small"
            fontWeight="semiBold"
            href="/signUp"
            onClick={[Function]}
            paddingSize="none"
            underline={true}
            variant="flat"
          />,
        }
      }
      id="signIn-noAccountSignUp"
    >
      <div
        className="coral coral-login-signIn-noAccount SignIn-noAccount"
      >
        Don't have an account?
        <ForwardRef(forwardRef)
          className="SignIn-signUp"
          color="primary"
          fontFamily="secondary"
          fontSize="small"
          fontWeight="bold"
          href="/signUp"
          onClick={[Function]}
          paddingSize="none"
          underline={true}
          variant="flat"
        >
          Sign Up
        </ForwardRef(forwardRef)>
      </div>
    </Localized>
  </div>
  <Main
    data-testid="signIn-main"
  >
    <SignInContainer />
    <OrSeparator />
    <ForwardRef(forwardRef)>
      <Relay(SignInWithFacebookContainer)
        auth={Object {}}
      />
      <Relay(SignInWithGoogleContainer)
        auth={Object {}}
      />
      <Relay(SignInWithOIDCContainer)
        auth={Object {}}
      />
    </ForwardRef(forwardRef)>
  </Main>
</div>
`;

exports[`renders error 1`] = `
<div
  data-testid="signIn-container"
>
  <div
    role="banner"
  >
    <Localized
      elems={
        Object {
          "subtitle": <div
            className="coral coral-login-header SignIn-header"
          />,
          "title": <div
            className="coral coral-login-title SignIn-title"
          />,
        }
      }
      id="signIn-signInToJoinHeader"
    >
      <div
        className="coral coral-login-bar SignIn-bar"
      >
        <div
          className="coral coral-login-title SignIn-title"
        >
          Sign In
        </div>
        <div
          className="coral coral-login-header SignIn-header"
        >
          to join the conversation
        </div>
      </div>
    </Localized>
  </div>
  <div
    className="coral coral-login-subBar SignIn-subBar"
    role="contentinfo"
  >
    <Localized
      elems={
        Object {
          "textlink": <ForwardRef(forwardRef)
            className="SignIn-signUp"
            color="primary"
            fontFamily="secondary"
            fontSize="small"
            fontWeight="semiBold"
            href="/signUp"
            onClick={[Function]}
            paddingSize="none"
            underline={true}
            variant="flat"
          />,
        }
      }
      id="signIn-noAccountSignUp"
    >
      <div
        className="coral coral-login-signIn-noAccount SignIn-noAccount"
      >
        Don't have an account?
        <ForwardRef(forwardRef)
          className="SignIn-signUp"
          color="primary"
          fontFamily="secondary"
          fontSize="small"
          fontWeight="bold"
          href="/signUp"
          onClick={[Function]}
          paddingSize="none"
          underline={true}
          variant="flat"
        >
          Sign Up
        </ForwardRef(forwardRef)>
      </div>
    </Localized>
  </div>
  <Main
    data-testid="signIn-main"
  >
    <div
      className="coral coral-login-errorContainer"
    >
      <withPropsOnChange(CallOut)
        className="coral coral-login-error"
        color="error"
        title="Server Error"
      />
    </div>
    <SignInContainer />
    <OrSeparator />
    <ForwardRef(forwardRef)>
      <Relay(SignInWithFacebookContainer)
        auth={Object {}}
      />
      <Relay(SignInWithGoogleContainer)
        auth={Object {}}
      />
      <Relay(SignInWithOIDCContainer)
        auth={Object {}}
      />
    </ForwardRef(forwardRef)>
  </Main>
</div>
`;

exports[`renders without email login 1`] = `
<div
  data-testid="signIn-container"
>
  <div
    role="banner"
  >
    <Localized
      elems={
        Object {
          "subtitle": <div
            className="coral coral-login-header SignIn-header"
          />,
          "title": <div
            className="coral coral-login-title SignIn-title"
          />,
        }
      }
      id="signIn-signInToJoinHeader"
    >
      <div
        className="coral coral-login-bar SignIn-bar"
      >
        <div
          className="coral coral-login-title SignIn-title"
        >
          Sign In
        </div>
        <div
          className="coral coral-login-header SignIn-header"
        >
          to join the conversation
        </div>
      </div>
    </Localized>
  </div>
  <Main
    data-testid="signIn-main"
  >
    <ForwardRef(forwardRef)>
      <Relay(SignInWithFacebookContainer)
        auth={Object {}}
      />
      <Relay(SignInWithGoogleContainer)
        auth={Object {}}
      />
      <Relay(SignInWithOIDCContainer)
        auth={Object {}}
      />
    </ForwardRef(forwardRef)>
  </Main>
</div>
`;
